# python-gui-sample

./: README.md  pyproject.toml
src/: app.py
src/ai/: util.py
src/view/: FileInput.py  Search.py  TextInput.py
